# WO-381

./: .env.example  .gitignore  README.md  data_loader.py  doc.md  embedding_service.py  llm_service.py  main.py  prompt.py  pyproject.toml  vector_db.py
SP34_md/: Expanded_Reading_Staircase_Drawing.md  Reading_RCC_Column_Drawing.md  SP_34_OCR_p0001-0050.md  SP_34_OCR_p0051-0100.md  SP_34_OCR_p0101-0150.md
client/: index.html  package-lock.json  package.json
client/src/: App.jsx  api.js  index.css
client/src/components/: FileUpload.jsx  ReportDisplay.jsx  Sidebar.jsx  UserInputForm.jsx
client/src/context/: AuthContext.jsx
client/src/pages/: DashboardPage.jsx  HistoryPage.jsx  LoginPage.jsx
server/: auth.py  clean_docs.py  data_loader.py  database.py  embedding_service.py  ingest.py  llm_handler.py  llm_service.py  main.py  output.txt  prompt.py  pyproject.toml  result.json  test_extract.py  vector_db.py
server/SP34_md/: Onourown_Slabs.md  Reading_RCC_Beam_Drawing.md  SP_34_OCR_p0151-0200.md  SP_34_OCR_p0201-0250.md  SP_IMAGES_TABLES.md
server/SP34_md_backup/: Reading_RCC_Column_Drawing.md  SP_IMAGES_TABLES.md
server/chroma_db/: chroma.sqlite3
